add initial strcture of the rate api and the basic profile (#8)
